# apertium-ita-nor

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  AUTHORS  Makefile.am  README  apertium-ita-nor.ita-nor.dix  apertium-ita-nor.ita-nor.lrx  apertium-ita-nor.ita-nor.t1x  apertium-ita-nor.nor-ita.lrx  apertium-ita-nor.nor-ita.t1x  apertium-ita-nor.nor-ita.t2x  configure.ac  modes.xml
dev/: convert-blds.sh
test/: ita-nno-biltrans-expected.txt  ita-nno-chunker-expected.txt  ita-nno-disam-expected.txt  ita-nno-generator-expected.txt  ita-nno-input.txt  ita-nno-postchunk-expected.txt  ita-nno-pretransfer-expected.txt  ita-nob-biltrans-expected.txt  ita-nob-disam-expected.txt  ita-nob-generator-expected.txt  ita-nob-input.txt  ita-nob-interchunk-expected.txt  ita-nob-postchunk-expected.txt  ita-nob-pretransfer-expected.txt  ita-nob-tagger-expected.txt  nno-ita-biltrans-expected.txt  nno-ita-disam-expected.txt  nno-ita-generator-expected.txt  nno-ita-input.txt  nno-ita-interchunk-expected.txt  nno-ita-morph-expected.txt  nno-ita-postchunk-expected.txt  nno-ita-pretransfer-expected.txt  nob-ita-biltrans-expected.txt  nob-ita-disam-expected.txt  nob-ita-generator-expected.txt  nob-ita-input.txt  nob-ita-interchunk-expected.txt  nob-ita-morph-expected.txt  nob-ita-postchunk-expected.txt  nob-ita-pretransfer-expected.txt  tests.json
